fix routing for gh pages

--- a/public/confirmation.html
+++ b/public/confirmation.html
@@ -46,7 +46,6 @@
     }
     .back-link {
       display: inline-block;
-      margin-top: 20px;
       text-decoration: none;
     }
     .back-link:hover {
@@ -65,7 +64,7 @@
     <div id="order-details">
     </div>
     
-    <a href="/" class="back-link" id="back-to-shop">Wróć do sklepu</a>
+    <a href="/ocado-test/" class="back-link" id="back-to-shop">Wróć do sklepu</a>
   </div>
 
   <script>
