--- a/confirmation.html
+++ b/confirmation.html
@@ -64,7 +64,7 @@
     <div id="order-details">
     </div>
     
-    <a href="/" class="back-link" id="back-to-shop">Wróć do sklepu</a>
+    <a href="/ocado-test/" class="back-link" id="back-to-shop">Wróć do sklepu</a>
   </div>
 
   <script>
